--- a/style.css
+++ b/style.css
@@ -4,29 +4,34 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+
+.header img {
     width: 100%;
 }
-.aaa .more_inf {
+
+.header .header-link {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-    .aaa { 
+    .header { 
         text-align: center;
     }
 }
-.centered-main-page-element {
+
+.main-content {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
