--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -16,14 +16,16 @@ body {
     width: 100%;
 }
 
-.header .header-link {
+.header-link {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
+
     .header { 
         text-align: center;
     }
+
 }
 
 .main-content {
@@ -37,19 +39,24 @@ body {
     display: inline-block;
     flex-grow: 1
 }
+
 .task-row-wrap {
     display: flex;
 }
+
 ul {
     margin:0;
     padding: 0px;
 }
+
 li, h3 {
     list-style:none;
 }
+
 input,button{
     outline:none;
 }
+
 button {
     background: none;
     border: 0px;
@@ -59,9 +66,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
+
 button:hover {
     color: #3a3A3a;
 }
+
 /* Heading */
 h3,
 label[for="new-task"] {
@@ -73,6 +82,7 @@ label[for="new-task"] {
     margin: 0;
     text-transform: uppercase;
 }
+
 input[type="text"] {
     margin: 0;
     font-size: 18px;
@@ -85,6 +95,7 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
+
 input[type="text"]:focus {
     color: #333;
 }
@@ -94,6 +105,7 @@ label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
+
 input#new-task {
     width: 318px;
 }
@@ -108,6 +120,7 @@ li {
     justify-content: space-between;
     align-items: center;
 }
+
 li > * {
     vertical-align: middle;
 }
@@ -115,21 +128,25 @@ li > * {
 li > input[type="checkbox"] {
     margin: 0 10px;
 }
+
 li > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li > input[type="text"] {
+
+li >    input[type="text"] {
     width: 226px
 }
-button.del img {
+
+button.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.del img:hover {
+
+button.delete img:hover {
     transform: rotateZ(0);
 }
 
@@ -144,11 +161,11 @@ ul li input[type="text"] {
     display:none
 }
 
-ul li.edit-mode input[type="text"] {
+ul li.editMode input[type="text"] {
     display:inline-block;
     width:224px
 }
 
-ul li.edit-mode label {
+ul li.editMode label {
     display:none;
 }
