--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .task-row-wrap {
@@ -50,11 +50,12 @@ ul {
 }
 
 li, h3 {
-    list-style:none;
+    list-style: none;
 }
 
-input,button{
-    outline:none;
+input,
+button {
+    outline: none;
 }
 
 button {
@@ -115,7 +116,6 @@ li {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -136,8 +136,8 @@ li > label {
     width: 226px;
 }
 
-li >    input[type="text"] {
-    width: 226px
+li > input[type="text"] {
+    width: 226px;
 }
 
 button.delete img {
@@ -158,14 +158,14 @@ ul#completed-tasks label {
 
 /* Edit Task */
 ul li input[type="text"] {
-    display:none
+    display: none;
 }
 
-ul li.editMode input[type="text"] {
-    display:inline-block;
-    width:224px
+ul li.edit-mode input[type="text"] {
+    display: inline-block;
+    width: 224px;
 }
 
-ul li.editMode label {
-    display:none;
+ul li.edit-mode label {
+    display: none;
 }
