--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
     text-align: right;
 }
 
-.header img {
+.header__img {
     width: 100%;
 }
 
-.header-link {
+.header__link {
     font-family: fantasy, cursive;
 }
 
@@ -34,48 +34,8 @@
     margin: 0 auto 0;
 }
 
-.task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
-}
-
-.task-row-wrap {
-    display: flex;
-}
-
-ul {
-    margin:0;
-    padding: 0px;
-}
-
-li, 
-h3 {
-    list-style: none;
-}
-
-input,
-button {
-    outline: none;
-}
-
-button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
-}
-
-button:hover {
-    color: #3a3A3a;
-}
-
-/* Heading */
-h3,
-label[for="new-task"] {
+.task-section__title,
+.add-task-label {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -85,7 +45,7 @@ label[for="new-task"] {
     text-transform: uppercase;
 }
 
-input[type="text"] {
+.input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -98,22 +58,59 @@ input[type="text"] {
     color: #888;
 }
 
-input[type="text"]:focus {
+.input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-task-label {
     display: block;
-    margin: 0 0 20px;
+    margin-bottom: 20px;
 }
 
-#new-task {
+.add-task {
+    display: flex;
+    margin-top: 20px;
+}
+.add-task__input {
     width: 318px;
+    flex-grow: 1;
 }
 
 /* Task list */
-li {
+.task-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.task-item__label,
+.task-item__input {
+    width: 56%;
+    display: inline-block;
+    flex-grow: 1;
+}
+
+.input,
+.btn {
+    outline: none;
+}
+
+.btn {
+    background: none;
+    border: 0px;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+}
+
+.btn:hover {
+    color: #3a3A3a;
+}
+
+.task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -122,51 +119,51 @@ li {
     align-items: center;
 }
 
-li > * {
+.task-item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item__checkbox {
     margin: 0 10px;
 }
 
-li > label {
+.task-item__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
 
-li > input[type="text"] {
+.task-item__input {
     width: 226px;
 }
 
-.delete img {
+.task-item__delete-btn img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-.delete img:hover {
+.task-item__delete-btn img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+.task-list--completed .task-item__label {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-li input[type="text"] {
+.task-item__input {
     display: none;
 }
 
-.edit-mode input[type="text"] {
+.task-item--edit-mode .input {
     display: inline-block;
     width: 224px;
 }
 
-.edit-mode label {
+.task-item--edit-mode .task-item__label {
     display: none;
 }
