--- a/style.css
+++ b/style.css
@@ -1,64 +1,41 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+
+.header__img {
     width: 100%;
 }
-.aaa .more_inf {
+
+.header__link {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+
+    .header { 
+        text-align: center;
+    }
+
 }
-}
-.centered-main-page-element {
+
+.main-content {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
-.task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
-}
-.task-row-wrapper {
-    display: flex;
-}
-ul {
-    margin:0;
-    padding: 0px;
-}
-li, h3 {
-    list-style:none;
-}
-input,button{
-    outline:none;
-}
-button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
-}
-button:hover {
-    color: #3a3A3a;
-}
-/* Heading */
-h3,
-label[for='new-task'] {
+
+.task-section__title,
+.add-task-label {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,82 +44,126 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+
+.input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
     height: 21px;
     padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
+    border: 1px solid #ddd;
+    background: #fff;
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+
+.input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.add-task-label {
     display: block;
-    margin: 0 0 20px;
+    margin-bottom: 20px;
 }
-input#new-task {
+
+.add-task {
+    display: flex;
+    margin-top: 20px;
+}
+.add-task__input {
     width: 318px;
+    flex-grow: 1;
 }
 
 /* Task list */
-li {
+.task-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.task-item__label,
+.task-item__input {
+    width: 56%;
+    display: inline-block;
+    flex-grow: 1;
+}
+
+.input,
+.btn {
+    outline: none;
+}
+
+.btn {
+    background: none;
+    border: 0px;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+}
+
+.btn:hover {
+    color: #3a3A3a;
+}
+
+.task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+
+.task-item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item__checkbox {
     margin: 0 10px;
 }
-li > label {
+
+.task-item__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
-    width: 226px
+
+.task-item__input {
+    width: 226px;
 }
-button.delete img {
+
+.task-item__delete-btn img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+
+.task-item__delete-btn img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-    text-decoration: line-through
+.task-list--completed .task-item__label {
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-    display:none
+.task-item__input {
+    display: none;
 }
 
-ul li.editMode input[type=text] {
-    display:inline-block;
-    width:224px
+.task-item--edit-mode .input {
+    display: inline-block;
+    width: 224px;
 }
 
-ul li.editMode label {
-    display:none;
+.task-item--edit-mode .task-item__label {
+    display: none;
 }
